--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,11 @@
     --ring: 222.2 84% 4.9%;
  
     --radius: 0.5rem;
+
+    --board: 210 100% 50%;
+    --board-foreground: 0 0% 100%;
+
+    --highlight: 38 100% 64%;
   }
  
   .dark {
@@ -63,6 +68,11 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --board: 210 100% 33%;
+    --board-foreground: 0 0% 100%;
+
+    --highlight: 38 100% 64%;
   }
 }
  
